<resources>
    <string name="app_name">NoteApp</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="add">Add</string>
    <string name="your_note">Your note</string>
    <string name="sort">Sort</string>
    <string name="note_deleted">Note deleted</string>
    <string name="undo">Undo</string>
</resources>